[package]
name = "analytical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "analytical"
path = "src/lib.rs"

[[bin]]
name = "analytical-bin"
path = "src/main.rs"
required-features = [ "tungstenite", "color-eyre", "pretty_env_logger", "serde_json", "serde", "reqwest" ]

[dependencies]
bitflags = "2.5.0"
color-eyre = { version = "0.6.3", optional = true }
log = "0.4.21"
pretty_env_logger = { version = "0.5.0", optional = true }
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }
tungstenite = { version = "0.21.0", optional = true, features = ["rustls"] }
